--- a/backend/todo/src/main/resources/application.properties
+++ b/backend/todo/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=todo
+
+# Base de données H2 en mémoire
+spring.datasource.url=jdbc:h2:mem:todo;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=hzch
+spring.datasource.password=1234
+
+# # Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Activer la console H2 (debug utile)
+spring.h2.console.enabled=true
