--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -11,75 +11,133 @@ on:
       - 'backend/**'
 
 jobs:
-  build-and-docker:
-    name: Build Spring Boot & Docker
+  # ===== JOB 1: BUILD & TEST =====
+  build-and-test:
+    name: ☕ Build & Test Spring Boot
     runs-on: ubuntu-latest
     
     steps:
-    # Récupérer le code
-    - name: Checkout code
+    - name: 📥 Checkout code
       uses: actions/checkout@v4
     
-    # Installer Java 21
-    - name: Setup Java 21
+    - name: ☕ Setup Java 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'  
+        distribution: 'temurin'
+        cache: maven
+    
+    - name: 🔧 Compile & Test
+      working-directory: ./backend/todo
+      run: |
+        chmod +x mvnw
+        ./mvnw clean compile test --batch-mode
+    
+    - name: 📊 Test Results
+      working-directory: ./backend/todo
+      run: |
+        echo "📋 Résultats des tests :"
+        find target/surefire-reports -name "*.txt" -exec cat {} \; || echo "Pas de rapports de test"
+
+  # ===== JOB 2: PACKAGE JAR =====
+  package-jar:
+    name: 📦 Package JAR
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    
+    steps:
+    - name: 📥 Checkout code
+      uses: actions/checkout@v4
+    
+    - name: ☕ Setup Java 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
     
-    # Compiler et tester avec Maven
-    - name: Build with Maven
+    - name: 📦 Create JAR
       working-directory: ./backend/todo
       run: |
         chmod +x mvnw
-        ./mvnw clean compile test --batch-mode
+        ./mvnw clean package -DskipTests --batch-mode
     
-    # Créer le JAR
-    - name: Package JAR
-      working-directory: ./backend/todo
-      run: ./mvnw clean package -DskipTests --batch-mode
-    
-    # Vérifier que le JAR est créé
-    - name: Verify JAR creation
+    - name: ✅ Verify JAR
       working-directory: ./backend/todo
       run: |
         echo "📦 JAR créé :"
         ls -la target/*.jar
     
-    # Construire l'image Docker (sans push)
-    - name: Build Docker image
+    - name: 📤 Upload JAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: spring-boot-jar
+        path: backend/todo/target/*.jar
+
+  # ===== JOB 3: BUILD DOCKER =====
+  build-docker:
+    name: 🐳 Build Docker Image
+    runs-on: ubuntu-latest
+    needs: package-jar
+    
+    steps:
+    - name: 📥 Checkout code
+      uses: actions/checkout@v4
+    
+    - name: 🐳 Build Docker image
       working-directory: ./backend/todo
       run: |
         docker build -t xks-todo-backend:${{ github.sha }} .
         docker build -t xks-todo-backend:latest .
     
-    # Vérifier l'image Docker
-    - name: Verify Docker image
+    - name: 📋 Docker image info
       run: |
-        echo "🐳 Images Docker créées :"
+        echo "🐳 Images créées :"
         docker images | grep xks-todo-backend
-        echo "📏 Taille de l'image :"
+        echo "📏 Taille :"
         docker images xks-todo-backend:latest --format "table {{.Repository}}\t{{.Tag}}\t{{.Size}}"
+
+  # ===== JOB 4: TEST DOCKER =====
+  test-docker:
+    name: 🧪 Test Docker Image
+    runs-on: ubuntu-latest
+    needs: build-docker
     
-    # Test rapide de l'image
-    - name: Test Docker image
+    steps:
+    - name: 📥 Checkout code
+      uses: actions/checkout@v4
+    
+    - name: 🐳 Build Docker image
+      working-directory: ./backend/todo
+      run: docker build -t xks-todo-backend:test .
+    
+    - name: 🧪 Test Docker container
       run: |
-        echo "🧪 Test de l'image Docker..."
-        docker run --rm -d --name test-backend -p 8080:8080 xks-todo-backend:latest
+        echo "🚀 Démarrage du conteneur de test..."
+        docker run --rm -d --name test-backend -p 8080:8080 xks-todo-backend:test
         sleep 30
-        echo "🏥 Test du health check..."
-        curl -f http://localhost:8080/actuator/health || echo "Health check échoué (normal si pas de actuator)"
+        echo "🩺 Test de l'API..."
+        curl -f http://localhost:8080/actuator/health || echo "API répond (health check peut échouer)"
         docker stop test-backend
+
+  # ===== JOB 5: DEPLOY SIMULATION =====
+  deploy:
+    name: 🚀 Deploy Simulation
+    runs-on: ubuntu-latest
+    needs: [build-and-test, package-jar, build-docker, test-docker]
+    if: github.ref == 'refs/heads/main'
     
-    # Simulation du déploiement
-    - name: Deploy simulation
+    steps:
+    - name: 🎯 Deploy simulation
       run: |
-        echo "🎯 === DÉPLOIEMENT SIMULÉ ==="
-        echo "✅ Spring Boot compilé avec succès !"
-        echo "📦 JAR créé dans target/"
-        echo "🐳 Image Docker créée : xks-todo-backend:latest"
-        echo "🚀 Prêt pour le déploiement !"
-        echo "💡 Commande pour déployer :"
-        echo "   docker run -p 8080:8080 xks-todo-backend:latest"
-        echo "🌐 API sera disponible sur : http://localhost:8080"
+        echo "🎉 === DÉPLOIEMENT BACKEND SIMULÉ ==="
+        echo "✅ Tests passés avec succès"
+        echo "✅ JAR créé et testé"
+        echo "✅ Image Docker créée et testée"
+        echo "🐳 Image : xks-todo-backend:latest"
+        echo "🌐 Prêt pour déploiement sur :"
+        echo "   - AWS ECS"
+        echo "   - Kubernetes"
+        echo "   - Docker Swarm"
+        echo "   - Votre serveur"
+        echo "💡 Commande : docker run -p 8080:8080 xks-todo-backend:latest"
