--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -101,7 +101,7 @@ jobs:
   deploy:
     name: 🚀 Deploy Simulation
     runs-on: ubuntu-latest
-    needs: [build-and-test, package-jar, build-docker, test-docker]
+    needs: [build-and-test, package-jar, build-docker]
     if: github.ref == 'refs/heads/main'
     
     steps:
