--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -41,8 +41,8 @@ jobs:
         name: react-build
         path: frontend/build/
 
-  # ===== JOB 2: BUILD DOCKER =====
-  build-docker:
+  # ===== JOB 2: BUILD & PUSH DOCKER =====
+  build-push-docker:
     name: 🐳 Build Docker Image
     runs-on: ubuntu-latest
     needs: build-react
@@ -60,20 +60,26 @@ jobs:
     - name: 🐳 Build Docker image
       working-directory: ./frontend
       run: |
-        docker build -t xks-todo-frontend:${{ github.sha }} .
-        docker build -t xks-todo-frontend:latest .
+        # Build avec tags multiples
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:latest .
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:${{ github.sha }} .
+        
+        # Push vers Docker Hub
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:${{ github.sha }}
     
-    - name: 📋 List Docker images
+    - name: 📋 Docker Hub info
       run: |
-        echo "🐳 Images créées :"
-        docker images | grep xks-todo-frontend
+        echo "🎉 Images poussées vers Docker Hub :"
+        echo "🐳 ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:latest"
+        echo "🐳 ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:${{ github.sha }}"
 
 
   # ===== JOB 3: DEPLOY SIMULATION =====
   deploy:
     name: 🚀 Deploy Simulation
     runs-on: ubuntu-latest
-    needs: [build-react, build-docker]
+    needs: [build-react, build-push-docker]
     if: github.ref == 'refs/heads/main'
     
     steps:
@@ -81,11 +87,9 @@ jobs:
       run: |
         echo "🎉 === DÉPLOIEMENT FRONTEND SIMULÉ ==="
         echo "✅ React app compilée avec succès"
-        echo "✅ Image Docker créée et testée"  
-        echo "🐳 Image : xks-todo-frontend:latest"
-        echo "🌐 Prêt pour déploiement sur :"
-        echo "   - Netlify"
-        echo "   - Vercel"
-        echo "   - AWS S3"
-        echo "   - Votre serveur Docker"
-        echo "💡 Commande : docker run -p 3000:80 xks-todo-frontend:latest"
+        echo "✅ Image Docker créée et poussée sur Docker Hub"
+        echo "🐳 Image Docker Hub : ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:latest"
+        echo "🌐 Prêt pour déploiement avec :"
+        echo "   docker pull ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:latest"
+        echo "   docker run -p 3000:80 ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend:latest"
+        echo "📍 Disponible sur Docker Hub : https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-frontend"
