--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -84,22 +84,27 @@ jobs:
     - name: 📥 Checkout code
       uses: actions/checkout@v4
     
-    - name: 🐳 Build Docker image
-      working-directory: ./backend/todo
-      run: |
-        # Build avec tags multiples
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:latest .
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:${{ github.sha }} .
-        
-        # Push vers Docker Hub
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:${{ github.sha }}
+    - name: 🔑 Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     
-    - name: 📋 Docker Hub info
+    - name: ✅ Confirmer login réussi
+      run: echo "🎉 Login Docker Hub réussi !"
+    
+    - name: 🐳 Build Docker image
+      working-directory: ./frontend
       run: |
-        echo "🎉 Images poussées vers Docker Hub :"
-        echo "🐳 ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:latest"
-        echo "🐳 ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:${{ github.sha }}"
+        echo "🔨 Build de l'image Docker..."
+        docker build -t hamidzch/xks-todo-backend:latest .
+        echo "✅ Build terminé"
+    
+    - name: 📤 Push Docker image  
+      run: |
+        echo "📤 Push vers Docker Hub..."
+        docker push hamidzch/xks-todo-backend:latest
+        echo "🎉 Push réussi !"
 
   # ===== JOB 4: DEPLOY SIMULATION =====
   deploy:
@@ -116,8 +121,8 @@ jobs:
         echo "✅ JAR créé et testé"
         echo "✅ Image Docker créée et poussée sur Docker Hub"
         echo "✅ Image Docker testée avec succès"
-        echo "🐳 Image Docker Hub : ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:latest"
+        echo "🐳 Image Docker Hub : hamidzch/xks-todo-backend:latest"
         echo "🌐 Prêt pour déploiement avec :"
-        echo "   docker pull ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:latest"
-        echo "   docker run -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend:latest"
-        echo "📍 Disponible sur Docker Hub : https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/xks-todo-backend"
+        echo "   docker pull hamidzch/xks-todo-backend:latest"
+        echo "   docker run -p 8080:8080 hamidzch/xks-todo-backend:latest"
+        echo "📍 Disponible sur Docker Hub : https://hub.docker.com/r/hamidzch/xks-todo-backend"
